--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>snakegame</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>snake</artifactId>
+    <version>1</version>
     <packaging>jar</packaging>
 
     <name>Snake Game</name>
